Refactor command handling to use getFirst() for improved consistency and readability