@@ -191,6 +191,6 @@ public class CompleteCommandTest extends AdminCommandTestBase {
         Optional<List<String>> result = cc.tabComplete(user, "complete",
                 Arrays.asList("complete", "x", "alice", "chal", "extra"));
         assertTrue(result.isPresent());
-        assertEquals("help", result.get().get(0));
+        assertEquals("help", result.get().getFirst());
     }
 }
